--- a/src/blog/templates/blog/delete.html
+++ b/src/blog/templates/blog/delete.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Delete a post</h1>
+    <h1>Are you sure you want to delete the following?</h1>
+    <p>{{object.title}}</p>
+    <form method="POST">
+        {% csrf_token %}
+        <button class="btn btn-danger">Yes, Delete</button>
+    </form>
 {% endblock %}
