--- a/src/blog/templates/blog/list.html
+++ b/src/blog/templates/blog/list.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
-{% block content %}
 
+{% block content %}
+    <div class="row">
     {% for object in object_list %}
-        <h1>{{object.title}}</h1>
-        <p>{{object.content}}</p>
+    {% include 'blog/list-inline.html'  with blog_post=object truncate=True detail=False %}
     {% endfor %}
+</div>
 {% endblock %}
